img.currentSrc problem in strict mode with old picturefill https://bugs.webkit.org/show_bug.cgi?id=144095 <rdar://problem/21087013>

Reviewed by Simon Fraser.

.:

Add a PICTURE_SIZES flag.

* Source/cmake/OptionsEfl.cmake:
* Source/cmake/OptionsGTK.cmake:
* Source/cmake/OptionsMac.cmake:
* Source/cmake/OptionsWindows.cmake:
* Source/cmake/WebKitFeatures.cmake:

Source/JavaScriptCore:

Add a PICTURE_SIZES flag.

* Configurations/FeatureDefines.xcconfig:

Source/WebCore:

Add a PICTURE_SIZES flag. This allows us to easily remove the currentSrc
attribute on HTMLImageElement, which is causing some issues with
<picture> polyfills.

* Configurations/FeatureDefines.xcconfig:
* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::setBestFitURLAndDPRFromImageCandidate): Add guard around use of m_currentSrc.
* html/HTMLImageElement.h:
* html/HTMLImageElement.idl: Guard the currentSrc attribute.
* html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttributes):
(WebCore::TokenPreloadScanner::StartTagScanner::processAttribute):

Source/WebKit/mac:

Add a PICTURE_SIZES flag.

* Configurations/FeatureDefines.xcconfig:

Source/WebKit2:

Add a PICTURE_SIZES flag.

* Configurations/FeatureDefines.xcconfig:

Source/WTF:

Add a PICTURE_SIZES flag.

* wtf/FeatureDefines.h:

Tools:

Add a PICTURE_SIZES flag.

* Scripts/webkitperl/FeatureList.pm:

WebKitLibraries:

Add a PICTURE_SIZES flag.

* win/tools/vsprops/FeatureDefines.props:
* win/tools/vsprops/FeatureDefinesCairo.props:

Canonical link: https://commits.webkit.org/163437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184928 268f45cc-cd09-0410-ab3c-d52691b4dbfc