Source/WTF/wtf/FeatureDefines.h
@@ -769,6 +769,10 @@ the public iOS SDK. We will also need to update the FeatureDefines.xcconfig file
 #define ENABLE_WEB_SOCKETS 1
 #endif
 
+#if !defined(ENABLE_PICTURE_SIZES)
+#define ENABLE_PICTURE_SIZES 1
+#endif
+
 #if !defined(ENABLE_WEB_TIMING)
 #define ENABLE_WEB_TIMING 0
 #endif
